--- a/.github/workflows/render-pkgs.yaml
+++ b/.github/workflows/render-pkgs.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Update DRAT
         run: |
           git config --global user.name "[drat bot]"
-          Rscript -e "drat.builder::build()"
+          Rscript -e "drat.builder::build(drop_history = TRUE)"
       - name: Push results
         run: |
-          git push https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{ github.ref }} || echo "No changes to commit"
+          git push --force-with-lease https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{ github.ref }} || echo "No changes to commit"
