--- a/.github/workflows/render-pkgs.yaml
+++ b/.github/workflows/render-pkgs.yaml
@@ -26,4 +26,4 @@ jobs:
           Rscript -e "drat.builder::build()"
       - name: Push results
         run: |
-          git push --force-with-lease https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{ github.ref }} || echo "No changes to commit"
+          git push https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{ github.ref }} || echo "No changes to commit"
