--- a/.github/workflows/render-pkgs.yaml
+++ b/.github/workflows/render-pkgs.yaml
@@ -18,6 +18,8 @@ jobs:
   render:
     name: Build packages on Ubuntu
     runs-on: ubuntu-latest
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
